changes to sprint activities, defects and notes pages
